--- a/source/nets/yolov3.cfg
+++ b/source/nets/yolov3.cfg
@@ -9,13 +9,13 @@ width=608
 height=608
 channels=3
 momentum=0.9
-decay=0.0005
+weight_decay=0.0005
 angle=0
 saturation = 1.5
 exposure = 1.5
 hue=.1
 
-learning_rate=0.001
+lr=0.001
 burn_in=1000
 max_batches = 500200
 policy=steps
