--- a/source/nets/yolov3.cfg
+++ b/source/nets/yolov3.cfg
@@ -575,6 +575,38 @@ stride=1
 pad=1
 activation=leaky
 
+### SPP ###
+[maxpool]
+stride=1
+size=5
+
+[route]
+layers=-2
+
+[maxpool]
+stride=1
+size=9
+
+[route]
+layers=-4
+
+[maxpool]
+stride=1
+size=13
+
+[route]
+layers=-1,-3,-5,-6
+
+### End SPP ###
+
+[convolutional]
+batch_normalize=1
+filters=512
+size=1
+stride=1
+pad=1
+activation=leaky
+
 [convolutional]
 batch_normalize=1
 size=3
